--- a/app/src/main/res/layout/activity_customer_details.xml
+++ b/app/src/main/res/layout/activity_customer_details.xml
@@ -5,9 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gdevlast.counceltracker.MainActivity">
+    tools:context="com.gdevlast.counceltracker.CustomerDetails">
 
-    <include layout="@layout/content_main"
-             android:id="@+id/include"/>
+    <include layout="@layout/content_customer_details"/>
 
 </android.support.design.widget.CoordinatorLayout>
